FIxed animation overflow issue
Fixed issue where animated elements were causing the `PortfolioSite`
component to go beyond 100vw, causing a horizontal scroll bar to appear.

--- a/components/PortfolioSite/PortfolioSite.module.scss
+++ b/components/PortfolioSite/PortfolioSite.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 8rem;
+  overflow-x: hidden;
 
   // --screen-md is 768px
   @media (min-width: 768px) {
